[gd_scene load_steps=8 format=3 uid="uid://d4ccnuy1t5mki"]

[ext_resource type="Script" uid="uid://c0kdhjvb8mxvo" path="res://ShmupSandbox/UI/Scripts/game_settings.gd" id="1_4inky"]
[ext_resource type="FontFile" uid="uid://chyk1vw521kif" path="res://ShmupSandbox/Assets/Fonts/Metal Lord.otf" id="3_41a6c"]
[ext_resource type="FontFile" uid="uid://bqxmc05dmv15h" path="res://ShmupSandbox/Assets/Fonts/PixelCode-ExtraBold.otf" id="3_sw84t"]
[ext_resource type="Texture2D" uid="uid://qusud1dgnpui" path="res://ShmupSandbox/Assets/Icons/ui_arrow_normal-v2.png" id="4_8kblw"]
[ext_resource type="Texture2D" uid="uid://dto7f70dxk21" path="res://ShmupSandbox/Assets/Icons/ui_arrow_pressed-v2.png" id="5_6nnrp"]
[ext_resource type="Texture2D" uid="uid://ulo54d8qyr7o" path="res://ShmupSandbox/Assets/Icons/ui_arrow_hover-v2.png" id="6_6nnrp"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ycgb6"]

[node name="game_settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4inky")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.133, 0.137, 0.137, 0.702)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_ycgb6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 70

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="gameplay_settings_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_41a6c")
theme_override_font_sizes/font_size = 75
text = "Game Settings"
horizontal_alignment = 1

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator9" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator3" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator5" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator6" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer_lives" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="lives_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_lives" groups=["game_settings_ui_nodes"]]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../HBoxContainer_credits/credits_label")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
theme_override_fonts/font = ExtResource("3_sw84t")
theme_override_font_sizes/font_size = 25
text = "LIVES"

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_lives"]
layout_mode = 2

[node name="separator3" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_lives"]
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_lives"]
layout_mode = 2

[node name="separator4" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_lives"]
layout_mode = 2

[node name="HBoxContainer_lives_value" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_lives" groups=["game_settings_ui_nodes"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_lives/HBoxContainer_lives_value"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_lives/HBoxContainer_lives_value/VBoxContainer"]
layout_mode = 2

[node name="lives_left_button" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer_lives/HBoxContainer_lives_value/VBoxContainer" groups=["game_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("4_8kblw")
texture_pressed = ExtResource("5_6nnrp")
texture_hover = ExtResource("6_6nnrp")
texture_focused = ExtResource("6_6nnrp")

[node name="lives_value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_lives/HBoxContainer_lives_value" groups=["game_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sw84t")
theme_override_font_sizes/font_size = 25
text = "3"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_lives/HBoxContainer_lives_value"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_lives/HBoxContainer_lives_value/VBoxContainer2"]
layout_mode = 2

[node name="lives_right_button" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer_lives/HBoxContainer_lives_value/VBoxContainer2" groups=["game_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("4_8kblw")
texture_pressed = ExtResource("5_6nnrp")
texture_hover = ExtResource("6_6nnrp")
flip_h = true

[node name="separator13" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer_credits" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="credits_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_credits" groups=["game_settings_ui_nodes"]]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../HBoxContainer_lives/lives_label")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../back_button")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
theme_override_fonts/font = ExtResource("3_sw84t")
theme_override_font_sizes/font_size = 25
text = "CREDITS"

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_credits"]
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_credits"]
layout_mode = 2

[node name="separator3" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_credits"]
visible = false
layout_mode = 2

[node name="HBoxContainer_credits_value" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_credits" groups=["game_settings_ui_nodes"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_credits/HBoxContainer_credits_value"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_credits/HBoxContainer_credits_value/VBoxContainer3"]
layout_mode = 2

[node name="credits_left_button" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer_credits/HBoxContainer_credits_value/VBoxContainer3" groups=["game_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("4_8kblw")
texture_pressed = ExtResource("5_6nnrp")
texture_hover = ExtResource("6_6nnrp")
texture_focused = ExtResource("6_6nnrp")

[node name="credits_value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_credits/HBoxContainer_credits_value" groups=["game_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sw84t")
theme_override_font_sizes/font_size = 25
text = "3"
horizontal_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_credits/HBoxContainer_credits_value"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_credits/HBoxContainer_credits_value/VBoxContainer4"]
layout_mode = 2

[node name="credits_right_button" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer_credits/HBoxContainer_credits_value/VBoxContainer4" groups=["game_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("4_8kblw")
texture_pressed = ExtResource("5_6nnrp")
texture_hover = ExtResource("6_6nnrp")
texture_focused = ExtResource("6_6nnrp")
flip_h = true

[node name="separator4" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator7" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator8" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator10" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator11" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator12" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="back_button" type="Button" parent="MarginContainer/VBoxContainer" groups=["game_settings_ui_nodes"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../HBoxContainer_credits/credits_label")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
theme_override_fonts/font = ExtResource("3_sw84t")
theme_override_font_sizes/font_size = 30
action_mode = 0
text = "BACK"
flat = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
